# Real-Time-Stadium-Violence-Detection-and-Density-Aware-Risk-Fusion

./: README.md  ablation.py  detect_bat.py  main_pipeline.py  pyproject.toml  train_yolov10.py
alerts/: alert_manager.py
crowd_counting/: crowd_counting_yolo.py  crowd_density_zones.py
detection/: detect_bat.py  train_yolov10.py
preprocessing/: degradacionVideo.py  extraer_frames.py  restauracionVideo.py
