[project]
name = "vision-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.12.0.88",
    "ultralytics>=8.3.214",
    "numpy>=1.26",
    "pandas>=2.2",
    "pillow>=10.2",
    "matplotlib>=3.8",
]

